<resources>
    <string name="shankephone_app_name">闪客蜂</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="retry">重试</string>
    <string name="more">更多</string>
    <string name="next_not_remind">下次不再提示</string>
    <string name="double_click_exit">再按一次退出程序</string>
    <string name="network_exception">当前网络不可用,请稍后再试</string>
    <string name="choose_amount">请选择充值金额</string>
    <string name="loading">正在加载...</string>
    <string name="connect_server_failed">访问失败,请检查您的网络是否可用</string>
    <string name="login_state_timeout">登录超时,请重新登录</string>
    <string name="keyboard_name">闪客蜂安全键盘</string>
    <string name="download">申请</string>
    <string name="dialog_head">提示</string>
    <string name="upgrade">升级</string>
    <string name="upgrade_later">下次再说</string>
    <string name="find_new_version">发现新版本</string>
    <string name="download_background">后台下载</string>
    <string name="download_install">安装</string>
    <string name="download_retry">重试</string>
    <string name="download_loading">正在下载</string>
    <string name="download_failed">下载失败</string>
    <string name="download_complete">下载完成</string>
    <string name="mendatory_update">取消升级将无法使用客户端</string>
    <string name="mendatory_update_plugin">取消升级将无法使用</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="delete_confirm">确认删除？</string>
    <string name="check_all">全选</string>
    <string name="settings_check_version">检查版本</string>
    <string name="settings_default_launch">设置默认启动</string>
    <string name="settings_nfc_reader">NFC读卡</string>
    <string name="settings_share">分享</string>
    <string name="settings_feed_back">意见反馈</string>
    <string name="settings_help">常见问题 </string>
    <string name="settings_title">设置</string>
    <string name="settings_exit">退出登录</string>
    <string name="settings_latest_version">目前的版本已经是最新版本</string>
    <string name="settings_logout_confirm">退出当前账号</string>
    <string name="change_pwd">密码修改</string>
    <string name="invite_friend">立即邀请</string>
    <string name="invite_friend_title">邀请好友</string>
    <string name="my_order">我的订单</string>
    <string name="customer_service">客服</string>
    <string name="pwd_update">修改登录密码</string>
    <string name="input_org_pwd">请输入原始密码</string>
    <string name="input_new_pwd_again">请输入确认密码</string>
    <string name="input_new_pwd">请输入新密码</string>
    <string name="input_login_pwd">请输入登录密码</string>
    <string name="input_login_pwd_confirm">请输入确认密码</string>
    <string name="pwd_not_equals">两次密码不一致</string>
    <string name="change_pwd_success">密码修改成功</string>
    <string name="third_login_can_not_change_password">您使用社交账号登录,不能修改密码</string>
    <string name="share_scan_download">扫描二维码,可下载闪客蜂客户端</string>
    <string name="share_scan_get_ticket">请在地铁站内互联网购票机\n处扫描二维码取票</string>
    <string name="share_cg_get_ticket">①请在地铁站内云闸机处扫描二维码进站\n\n②请在地铁站内互联网购票机处扫描二维码取票（由于现在是试运行，某些车站可能没有设备）</string>
    <string name="share_qr">分享二维码</string>
    <string name="share_title">分享</string>
    <string name="getTicket_title">取票</string>
    <string name="feedback_hint">请写下您遇到的问题和建议，我们会在两日内给您回复，谢谢！</string>
    <string name="send">发送</string>
    <string name="feedback">意见反馈</string>
    <string name="feedback_empty_msg">请输入您对本客户端的建议</string>
    <string name="feedback_success">提交反馈成功</string>
    <string name="btn_submit">下一步</string>
    <string name="about_technique">版权所有:北京中软万维网络技术有限公司</string>
    <string name="about_contact">客服电话: </string>
    <string name="about_tel">400-640-8811</string>
    <string name="about_current_version">当前版本:</string>
    <string name="about">关于</string>
    <string name="inbox">我的消息</string>
    <string name="map">站点</string>
    <string name="price">票价</string>
    <string name="journey">行程</string>
    <string name="register">注册</string>
    <string name="verify_input_phone">请输入手机号</string>
    <string name="verify_input_code">请输入验证码</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="user_tnc">已经阅读并同意</string>
    <string name="user_tnc_total">“闪客蜂服务协议”</string>
    <string name="set_login_pwd">请设置登录密码</string>
    <string name="confirm_login_pwd">请再次输入登录密码</string>
    <string name="input_valid_phone_number">请输入有效的手机号</string>
    <string name="must_get_verify_code">请先获取验证码</string>
    <string name="input_valid_code">请输入有效的验证码</string>
    <string name="send_success">发送成功</string>
    <string name="pwd_rule">密码长度为6-24位</string>
    <string name="confirm_pwd_invalid">两次输入密码不一致</string>
    <string name="clause">闪客蜂服务协议</string>
    <string name="agree">同意</string>
    <string name="agree_clause">请勾选服务协议</string>
    <string name="login">登录</string>
    <string name="login_input_user_name">请输入手机号</string>
    <string name="login_forget_pwd">忘记密码？</string>
    <string name="login_input_password">请输入密码</string>
    <string name="login_input_valid_phone_number">请输入有效的手机号</string>
    <string name="login_input_valid_auth_code">请输入有效的验证码</string>
    <string name="login_failed_7001">登录失败-7001</string>
    <string name="login_date">登录时间</string>
    <string name="login_device">登录设备</string>
    <string name="login_prompt1">您的闪客蜂账号已经成功登录了一个新设备，本设备已被强制退出登录</string>
    <string name="login_prompt">如果这个不是您本人的操作，您的账号已经泄露，请立即进入闪客蜂修改登录密码，以防止账号被盗</string>
    <string name="login_status_error">登录失败,状态异常</string>
    <string name="device_not_support">手机不支持</string>
    <string name="service_apply">申请</string>
    <string name="need_download">需要下载</string>
    <string name="complete_aciton">插件,是否下载?</string>
    <string name="plugin_download_complete">安装成功</string>
    <string name="topup">充值</string>
    <string name="top_up_success_">恭喜您充值成功</string>
    <string name="top_up_failed">抱歉充值失败</string>
    <string name="order_top_up_failed">抱歉该订单充值失败</string>
    <string name="top_up_max_value">充值金额超过可预存上限</string>
    <string name="need_order_number">订单号不能为空</string>
    <string name="need_card_number">卡号不能为空</string>
    <string name="cu_open_tip">本服务需要通过联通钱包启动，是否要打开联通钱包？</string>
    <string name="cu_applet_tip">请先到应用市场下载最新版的联通钱包</string>
    <string name="title_fragment_inbox">消息</string>
    <string name="title_activity_inbox_detail">收件详情</string>
    <string name="delete_inbox_invalidate">请选择删除的信息</string>
    <string name="pulldown_update">下拉更新</string>
    <string name="last_updated">上次更新</string>
    <string name="released_updated">释放更新</string>
    <string name="updated_at">更新于:</string>
    <string name="pulldown_footer_text">上拉加载更多</string>
    <string name="pulldown_loading">加载中</string>
    <string name="no_content_refresh">无内容，下拉刷新试试</string>
    <string name="no_content">无内容</string>
    <string name="no_more">加载到底了</string>
    <string name="trans_time">日期</string>
    <string name="trans_type">类型</string>
    <string name="trans_amount">金额(元)</string>
    <string name="trans_balance2">余额\t</string>
    <string name="trans_unit">元</string>
    <string name="cardnumber">卡号</string>
    <string name="changsha_store_ticket">长沙地铁储值卡</string>
    <string name="bracelet_topup">手环充值</string>
    <string name="consume_metro">地铁消费</string>
    <string name="consume_bus">公交消费</string>
    <string name="consume_ohers">其他消费</string>
    <string name="please_sync_order">订单异常,请重新确认订单</string>
    <string name="has_writing_card_order">您有尚未完成的订单,处理完成后才可创建新订单.\n是否现在处理?</string>
    <string name="check_pwd_input_pwd">请输入登录密码</string>
    <string name="reset_pwd_mobile">请输入手机号</string>
    <string name="reset_find_pwd">重置密码</string>
    <string name="send_password_to_email">已将新密码发送至您的手机,请确认</string>
    <string name="msg_nocard">没有卡片信息，请将卡片靠近NFC手机后盖尝试重新读取</string>
    <string name="touch_background">请将卡片靠近NFC手机后盖</string>
    <string name="unknown_card">读取信息失败，未知的卡片类型</string>
    <string name="device_not_support_nfc">您的手机不支持NFC,无法使用此功能</string>
    <string name="re_write_card_btn">充值</string>
    <string name="sync_order">同步</string>
    <string name="order_has_write_card_success">此订单已充值成功</string>
    <string name="order_not_write_card">此订单尚未完成充值</string>
    <string name="unknown">无</string>
    <string name="pay_success">支付成功</string>
    <string name="pay_failed">支付失败</string>
    <string name="signature_invalid">签名校验失败</string>
    <string name="get_token_failed">获取token失败</string>
    <string name="writting_card">充值中</string>
    <string name="writting_card_please_wait">充值中…</string>
    <string name="order_delete_success">订单删除成功</string>
    <string name="nfc_service_activate_success">服务激活成功</string>
    <string name="nfc_service_activate_failed">服务激活失败</string>
    <string name="nfc_service_activating">正在激活…</string>
    <string name="nfc_service_apply_failed">申请服务失败</string>
    <string name="cardNumber_invalid">无效的卡号</string>
    <string name="cardNumber_or_balance_invalid">无效的卡号或余额</string>
    <string-array name="delete_menu">
        <item>删除订单</item>
        <item>@string/cancel</item>
    </string-array>
    <string name="app">应用</string>
    <string name="hebao">和包:</string>
    <string name="cm_client">移动和包</string>
    <string name="personal_info">我的</string>
    <string name="my_panchan">我的盘缠</string>
    <string name="my_coupon">我的券包</string>
    <string name="certified">已认证</string>
    <string name="uncertified">未认证</string>
    <string name="launch_panchan_failed">启动我的盘缠失败,请稍后再试</string>
    <string name="edit_user_head">编辑头像</string>
    <string name="event">活动</string>
    <string name="order">订单</string>
    <string name="subway_card">地铁卡</string>
    <string name="zhang">张</string>
    <string name="order_pay_failed">支付失败</string>
    <string name="order_cooked">已制作</string>
    <string name="order_take_way">已取餐</string>
    <string name="order_closed">已关闭</string>
    <string name="order_error">异常订单</string>
    <string name="order_btn_take_away">取餐</string>
    <string name="order_coffee_take_meal_des">凭以上订单号\n前往%1$s取餐</string>
    <string name="order_coffee_hot_sale">大家购买过</string>
    <string name="order_coffee">蜂格咖啡</string>
    <string name="cg_pre_get_ticket">待进站</string>
    <string name="cg_without_pay">未支付</string>
    <string name="cg_complete_order">已完成</string>
    <string name="cg_canceled">已取消</string>
    <string name="cg_refund">已退票</string>
    <string name="other_status">其他</string>
    <string name="order_invalid">已失效</string>
    <string name="duplicate_entry">重复进站</string>
    <string name="station">站点</string>
    <string name="ticket_price">票价</string>
    <string name="input_station_name_hint">输入站点名称搜索</string>
    <string name="search_station_title">线路</string>
    <string name="no_station_name">没有对应的站点哦~</string>
    <string name="st_refunding">退款中</string>
    <string name="st_start_station2">起点</string>
    <string name="st_end_station">终点</string>
    <string name="st_start_station_hint">请选择起点</string>
    <string name="st_unit_price">单价</string>
    <string name="st_ticket_count">数量</string>
    <string name="st_total_price">总价</string>
    <string name="st_renminbi">¥</string>
    <string name="st_confirm_buy">确认购买</string>
    <string name="st_please_select_start_station">请选择起始站</string>
    <string name="st_not_pay_ticket">请确认订单信息</string>
    <string name="st_order_num2">订单号:</string>
    <string name="card_name">卡号:</string>
    <string name="rufund_time">退款时间:</string>
    <string name="pay_time">支付时间:</string>
    <string name="take_time">取票时间:</string>
    <string name="pay_money">退款金额:</string>
    <string name="in_time">进站时间:</string>
    <string name="out_time">出站时间:</string>
    <string name="out_station">出站站点:</string>
    <string name="surplus_ticket">剩余票数:</string>
    <string name="cancle_time">取消时间:</string>
    <string name="repay_amount">补票金额:</string>
    <string name="single_price">单价:</string>
    <string name="preview">预览</string>
    <string name="complete">完成</string>
    <string name="camera_album">相机胶卷</string>
    <string name="take_photo">拍照</string>
    <string name="select_from_album">从手机相册选择</string>
</resources>