<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        android:background="@color/_333333"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/bbs_album_common_margin_horizontal"
            android:text="@string/cancel"
            android:textColor="@color/FFFFFF"
            android:textSize="@dimen/bbs_album_cancel_txt_size"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/camera_album"
            android:textColor="@color/FFFFFF"
            android:textSize="@dimen/bbs_album_title_txt_size"/>

        <TextView
            android:id="@+id/tv_preview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/bbs_album_common_margin_horizontal"
            android:text="@string/preview"
            android:textColor="@color/FFFFFF"
            android:textSize="@dimen/bbs_album_cancel_txt_size"/>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/bbs_album_list_horizontal_margin"
        android:layout_marginRight="@dimen/bbs_album_list_horizontal_margin"
        android:layout_weight="1"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/bbs_album_bottom_height"
        android:background="@color/_333333">

        <TextView
            android:id="@+id/tv_complete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/bbs_album_common_margin_horizontal"
            android:text="@string/complete"
            android:textColor="@color/FFFFFF"
            android:textSize="@dimen/bbs_album_cancel_txt_size"/>
    </RelativeLayout>
</LinearLayout>
