<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/ll_detail"
              xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginLeft="@dimen/common_margin_right"
              android:layout_marginRight="@dimen/common_margin_right"
              android:descendantFocusability="blocksDescendants"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_order2"
        android:orientation="vertical"
        android:paddingBottom="@dimen/order_detail_vt_margin1"
        android:paddingLeft="@dimen/order_detail_hr_margin"
        android:paddingRight="@dimen/order_detail_hr_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/order_number"
                style="@style/orderdetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="订单号:1234567890000000"/>

            <TextView
                android:id="@+id/order_total"
                style="@style/orderdetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="4"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_single_price"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/order_detail_vt_margin2"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/hide_2"
                style="@style/orderdetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/single_price"/>

            <TextView
                android:id="@+id/order_price"
                style="@style/orderdetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text=""/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lly_repay_amount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/order_detail_vt_margin2"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_repay_amount_label"
                style="@style/orderdetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repay_amount"/>

            <TextView
                android:id="@+id/tv_repay_amount"
                style="@style/orderdetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text=""/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_cancleOrder_date"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/order_detail_vt_margin2"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_cancleOrder"
                style="@style/orderdetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancle_time"/>

            <TextView
                android:id="@+id/tv_cancleOrder_date"
                style="@style/orderdetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text=""/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_residual_ticket_num"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/order_detail_vt_margin2"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_residual_ticket"
                style="@style/orderdetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/surplus_ticket"/>

            <TextView
                android:id="@+id/tv_residual_num"
                style="@style/orderdetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text=""/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_back_money"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/order_detail_vt_margin2"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_back_money"
                style="@style/orderdetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay_money"/>

            <TextView
                android:id="@+id/hide_backprice"
                style="@style/orderdetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text=""/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_pay_time"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/order_detail_vt_margin2"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/hide_4"
                style="@style/orderdetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay_time"/>

            <TextView
                android:id="@+id/tv_pay_time"
                style="@style/orderdetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text=""/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_into_station_time"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/order_detail_vt_margin2"
            android:orientation="horizontal">

            <TextView
                style="@style/orderdetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/in_time"/>

            <TextView
                android:id="@+id/tv_into_station_time"
                style="@style/orderdetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text=""/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_out_station_time"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/order_detail_vt_margin2"
            android:orientation="horizontal">

            <TextView
                style="@style/orderdetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/out_time"/>

            <TextView
                android:id="@+id/tv_out_station_time"
                style="@style/orderdetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text=""/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_out_station_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/order_detail_vt_margin2"
            android:orientation="horizontal">

            <TextView
                style="@style/orderdetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/out_station"/>

            <TextView
                android:id="@+id/tv_out_station_name"
                style="@style/orderdetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text=""/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_take_time"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/order_detail_vt_margin2"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/hide_6"
                style="@style/orderdetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/take_time"/>

            <TextView
                android:id="@+id/tv_take_time"
                style="@style/orderdetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text=""/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_back_money_time"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/order_detail_vt_margin2"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/hide_5"
                style="@style/orderdetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rufund_time"/>

            <TextView
                android:id="@+id/tv_refund_time"
                style="@style/orderdetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text=""/>
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/bg_order3"/>
</LinearLayout>
